Fix the bug where the messages would eventually overlap each other, add typing tracker

--- a/styles/chat-home.css
+++ b/styles/chat-home.css
@@ -144,3 +144,13 @@ body {
 #user-header {
     margin-left: 15px;
 }
+
+.message-group {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#typing-div {
+    margin: 0px;
+    margin-top: 5px;
+}
